--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     ],
 
     "require": {
-        "silex/silex": ">=v1.1.2, <4.0",
-        "endroid/qrcode": ">=1.1.3"
+        "silex/silex": "~2.0",
+        "endroid/qrcode": ">=1.3.3"
     },
 
     "autoload": {
